# Claude_Code

./: README.md  create_dataframe.py  fetchAPI.py  pyproject.toml  test2.txt
.claude/: CLAUDE.md  settings.json
.claude/Airflow_Project/: README.md
.claude/agent-memory/code-reviewer/: skills_scripts_review.md
.claude/agents/code_reviewer/logs/: convert_to_parquet_review_2026-06-20.md
.claude/agents/orchestrator/: orchestrator.md
.claude/hooks/: post_script.txt  pre_script.txt
.claude/skills/fetchAPI/: fetch_data.py
.claude/skills/migrate/: SKILL.md
.claude/skills/migrate/data/: migration_logs_2026-06-20_12-11-34.csv  migration_logs_2026-06-20_20-10-20.csv
.claude/skills/migrate/data/2026-06-05_08-35-07/: dim_customer.parquet  dim_date.parquet  fact_returns.parquet  fact_sales.parquet
.claude/skills/migrate/data/2026-06-20_20-09-53/: dim_product.parquet  dim_store.parquet
.claude/skills/migrate/scripts/: convert_to_parquet.py
.claude/skills/send-daily-report/: SKILL.md
.claude/skills/send-daily-report/scripts/: send_report.py
.claude/skills/visualize/: SKILL.md
.claude/skills/visualize/scripts/: visualize_data.py
my_project/: create_dataframe.py
