[project]
name = "claudecode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.2",
    "dotenv>=0.9.9",
    "langchain-anthropic>=1.4.4",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
]
